--- a/Report.qmd
+++ b/Report.qmd
@@ -24,7 +24,7 @@ Our E-R Diagram for an E-commerce database consisted of five main entities:
 4.  SUPPLIER: Represents details of entities providing products to businesses or customers, including attributes such as supplier ID, supplier name, and contact information. 
 5.  CATEGORY: Represents product classifications or groupings, including attributes such as category unique ID, name, and fee amount as a percentage.
 
-#### Relationships 
+#### Relationships
 
 The relationships among these entities are as follows: 
 
@@ -32,23 +32,23 @@ The relationships among these entities are as follows: 
 
     The relationship is shown as ORDER, representing a customer placing an order to purchase products. It also contains some attributes to store the details of each order, including order ID, order date, order status, order quantity, promo code, payment method, and delivery fee.
 
-    ![](images/Customer-Product relationship.drawio.png){width="468"}
+    ![](images/Customer-Product%20relationship.drawio.png){width="468"}
 
 -   PRODUCT has a self-referencing relationship of 1 to many. The relationship is shown as Sold_Together, indicating that one product can be sold together with others as a bundle.
 
-    ![](images/Product Self-reference Relationship.drawio.png)
+    ![](images/Product%20Self-reference%20Relationship.drawio.png)
 
 -   PRODUCT and ADVERTISEMENT have an M-N relationship. This relationship is shown as ADVERTISE_IN to reflect products presented in the advertisements, meaning multiple advertisements can promote one product, and one advertisement can promote multiple products. 
 
-    ![](images/Product-Advertisement relationship.drawio.png)
+    ![](images/Product-Advertisement%20relationship.drawio.png)
 
 -   PRODUCT and SUPPLIER have an N-1 relationship, indicating that one product can be supplied by only one supplier, but one supplier can provide multiple products. 
 
-    ![](images/Product-Supplier relationship.drawio.png)
+    ![](images/Product-Supplier%20relationship.drawio.png)
 
 -   CATEGORY and PRODUCT have an 1-N relationship, meaning one product can belong to only one category, but one category can contain multiple products. 
 
-    ![](images/Category-Product Relationship.drawio (1).png)
+    ![](images/Category-Product%20Relationship.drawio%20(1).png)
 
 As a result, this is our E-R diagram.
 
