Update Time Series Graph and Revenue Comparison Graph

--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -222,7 +222,7 @@ ggplot(avg_rating_by_category, aes(x = Average_Rating, y = reorder(category_name
 ```
 
 ```{r}
-library(lubridate)
+#library(lubridate)
 time_period_sales<- RSQLite::dbGetQuery(connect,'SELECT ORDITM.order_id, order_quantity,order_date FROM ORDER_DETAIL ORDDET INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id')
 #test
 time_period_sales$order_date <- as.Date(time_period_sales$order_date, format="%d/%m/%Y")
@@ -233,7 +233,7 @@ time_period_sales$order_date_mnth_yr <- factor(time_period_sales$order_date_mnth
 
 time_period_sales_group_by<- time_period_sales %>% group_by(order_date_mnth_yr)%>%summarise(quantity=sum(order_quantity))
 
-(ggplot(time_period_sales_group_by, aes(x = order_date_mnth_yr, y = quantity,group=1)) +  geom_point()+geom_line()+xlab('Time Period(year/mpnth)')+ylab('Quantity Sold'))
+(ggplot(time_period_sales_group_by, aes(x = order_date_mnth_yr, y = quantity,group=1)) +  geom_point()+geom_line()+xlab('Time Period(year/month)')+ylab('Quantity Sold'))
 ```
 
 ```{r}
