--- a/database_schema.Rmd
+++ b/database_schema.Rmd
@@ -129,8 +129,8 @@ CREATE TABLE IF NOT EXISTS ADVERTISE_IN (
 CREATE TABLE IF NOT EXISTS SUPPLIER (
   supplier_id VARCHAR(50) PRIMARY KEY, 
   supplier_name VARCHAR(50) NOT NULL,
-  supplier_email VARCHAR(50) NOT NULL,
-  supplier_mobile VARCHAR(20) NOT NULL
+  supplier_email VARCHAR(50) NOT NULL UNIQUE,
+  supplier_mobile VARCHAR(20) NOT NULL UNIQUE
 );
 ```
 
