--- a/database_schema.Rmd
+++ b/database_schema.Rmd
@@ -39,8 +39,8 @@ CREATE TABLE IF NOT EXISTS CUSTOMER (
   first_name VARCHAR(50) NOT NULL,
   last_name VARCHAR(50) NOT NULL,
   gender VARCHAR(10),
-  customer_email VARCHAR(50) NOT NULL,
-  customer_mobile VARCHAR(15) NOT NULL,
+  customer_email VARCHAR(50) NOT NULL UNIQUE,
+  customer_mobile VARCHAR(15) NOT NULL UNIQUE,
   address_id VARCHAR(50) NOT NULL,
   FOREIGN KEY (address_id) REFERENCES ADDRESS (address_id)
 );
@@ -129,8 +129,8 @@ CREATE TABLE IF NOT EXISTS ADVERTISE_IN (
 CREATE TABLE IF NOT EXISTS SUPPLIER (
   supplier_id VARCHAR(50) PRIMARY KEY, 
   supplier_name VARCHAR(50) NOT NULL,
-  supplier_email VARCHAR(50) NOT NULL,
-  supplier_mobile VARCHAR(20) NOT NULL
+  supplier_email VARCHAR(50) NOT NULL UNIQUE,
+  supplier_mobile VARCHAR(20) NOT NULL UNIQUE
 );
 ```
 
