--- a/Report.qmd
+++ b/Report.qmd
@@ -849,16 +849,138 @@ library(plotly)
 ```
 
 ```{r writebacktodb}
-RSQLite::dbWriteTable(connect,"CUSTOMERS",customer,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"ADDRESS",address,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"PRODUCT",product,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"DISCOUNT",discount,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"ORDER_ITEM",order_item,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"ORDER_DETAIL",order_detail,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"SUPPLIER",supplier,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"ADVERTISEMENTS",advertisement,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"ADVERTISE_IN",advertise_in,overwrite=TRUE)
-RSQLite::dbWriteTable(connect,"CATEGORY",category,overwrite=TRUE)
+# Connecting to the database
+connect <- dbConnect(RSQLite::SQLite(), "database.db")
+```
+
+```{r}
+# Top 10 products based on the Profit Generated
+
+# Getting the tables from the database
+product <- RSQLite::dbGetQuery(connect,'SELECT * FROM PRODUCT')
+order_item <- RSQLite::dbGetQuery(connect,'SELECT * FROM ORDER_ITEM')
+order_detail <- RSQLite::dbGetQuery(connect,'SELECT * FROM ORDER_DETAIL')
+discount <- RSQLite::dbGetQuery(connect,'SELECT * FROM DISCOUNT')
+```
+
+```{r}
+# Creating a profit table that includes a total_profit (quantity x unit price) column for each product incorporating the discount percent and filtering out all "cancelled" orders.
+
+profit_data <- order_item %>%
+  inner_join(order_detail, by = "order_id") %>% 
+  filter(order_status != "Cancelled") %>%
+  inner_join(product, by = "product_id") %>%
+  left_join(discount, by = c("promo_code" = "promo_code")) %>%
+  mutate(
+    discount_percentage = ifelse(is.na(discount_percent), 0, discount_percent), 
+    total_profit = (order_quantity * unit_price) * (1 - discount_percentage / 100)
+  ) %>%
+  group_by(product_id, product_name) %>%
+  summarise(
+    total_profit = sum(total_profit), 
+    .groups = 'drop'
+  ) %>%
+  arrange(desc(total_profit)) # Arranging the total_profit from highest to lowest
+
+```
+
+```{r}
+# Selecting the top 10 profitable products
+top_10_profit_data <- head(profit_data, 10)
+
+
+# Visualizing the results 
+ggplot(top_10_profit_data, aes(x = reorder(product_id, total_profit), y = total_profit, fill = product_name)) +
+  geom_bar(stat = "identity") +
+  scale_fill_discrete(name = "product Name") + 
+  labs(title = "Top 10 Most Profitable Products", x = "Product ID", y = "Total Profit") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.title = element_text(size = 12), 
+        legend.text = element_text(size = 10), 
+        plot.title = element_text(hjust = 0.5)) 
+
+```
+
+```{r}
+# Top Most Selling Products
+
+# Creating a sales that that includes the total quantity sold for each product and selecting the top 10.
+sales_data <- order_item %>%
+  group_by(product_id) %>%
+  summarise(Total_Sales = sum(order_quantity, na.rm = TRUE)) %>%
+  arrange(desc(Total_Sales))
+
+top_selling_products <- sales_data %>%
+  left_join(product, by = "product_id") %>%
+  select(product_id, product_name, Total_Sales) %>%
+  top_n(10, Total_Sales)
+```
+
+```{r}
+# Visualizing the results
+ggplot(top_selling_products, aes(x = reorder(product_id, Total_Sales), y = Total_Sales, fill = product_name)) +
+  geom_bar(stat = "identity") +
+  scale_fill_discrete(name = "product Name") + 
+  labs(title = "Top Most Selling Products", x = "Product ID", y = "Total Sales") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1),
+        legend.title = element_text(size = 12), 
+        legend.text = element_text(size = 10), 
+        plot.title = element_text(hjust = 0.5))
+```
+
+```{r}
+# Bundles vs Individual products Comparison by Sales Volume
+
+# Join product with order item 
+product_order_item <- order_item %>%
+  inner_join(product, by = "product_id")
+
+# Calculate total quantity sold for bundled products
+bundled_sales <- product_order_item %>%
+  filter(!is.na(main_product_id)) %>%
+  group_by(main_product_id) %>%
+  summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%
+  ungroup() %>%
+  mutate(Product_Type = "Bundled")
+
+```
+
+```{r}
+# Calculate total quantity sold for individual products
+individual_sales <- product_order_item %>%
+  filter(is.na(main_product_id)) %>%
+  group_by(product_id) %>%
+  summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%
+  ungroup() %>%
+  mutate(Product_Type = "Individual")
+
+```
+
+```{r}
+
+# Combining the results
+total_sales_by_type <- bind_rows(bundled_sales, individual_sales) %>%
+  group_by(Product_Type) %>%
+  summarise(Total_Quantity_Sold = sum(Total_Quantity_Sold, na.rm = TRUE)) %>%
+  ungroup()
+
+print(total_sales_by_type)
+```
+
+```{r}
+# Vizualising the results
+
+ggplot(total_sales_by_type, aes(x = Product_Type, y = Total_Quantity_Sold, fill = Product_Type)) +
+  geom_bar(stat = "identity", width = 0.5) +  # Adjust width here
+  scale_fill_manual(values = c("Bundled" = "skyblue", "Individual" = "salmon")) +
+  labs(title = "Total Quantity Sold by Product Type",
+       x = "Product Type",
+       y = "Total Quantity Sold") +
+  theme_minimal() +
+  theme(legend.position = "none")
+
 ```
 
 ### Task 4.2: Comprehensive Reporting with Quarto
